--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.12",
     "typescript": "^5",
+    "vite": "^7.1.4",
     "vitest": "^3.2.4"
   },
   "lint-staged": {
